# commodity-registry

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md  manual_fail.yaml  pyproject.toml  test.py  test_invalid.beancount
.github/workflows/: ci.yml  publish.yml
data/commodities/: manual.yaml
data/instruments/: manual.yaml
docs/sessions/: 2026-04-14T12-00.md  2026-04-14T17-59.md  2026-04-14T18-01.md  2026-04-22T18-58.md
src/commodity_registry/: cli.py  finder.py  interfaces.py  models.py  registry.py  resources.py
src/commodity_registry/data/: commodities.schema.json
src/commodity_registry/data/commodities/: currencies.yaml  etfs.yaml
src/instrument_registry/: finder.py  interfaces.py  models.py  registry.py  resources.py
src/instrument_registry/cli/: __init__.py  add.py  common.py  fetch.py  lint.py  resolve.py
src/instrument_registry/data/: instruments.schema.json
src/instrument_registry/data/instruments/: currencies.yaml  etfs.yaml
tests/: smoke_test.py  test_cli_coverage.py  test_cli_extended.py  test_edge_cases.py  test_fail_fast_repro.py  test_finder.py  test_finder_coverage.py  test_models.py  test_optimization.py  test_registry.py  test_resolve_and_persist.py
